# Defuser

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/scripts/: deps.yaml  install_deps.py
.github/workflows/: release.yml  unit_tests.yml
defuser/: __init__.py  checkpoint_ops.py  defuser.py  logger.py  model_registry.py
defuser/modeling/: __init__.py  glm4v.py  model_patches.py  moe_experts_interface.py  replace_modules.py  runtime_defusion.py  update_module.py
defuser/modeling/fused_moe/: llama4.py  moe_experts_interface.py  qwen3_5_moe.py  qwen3_moe.py  replace_modules.py  update_module.py
defuser/modeling/unfused_moe/: common.py  glm4_moe.py  glm4_moe_lite.py  mixtral.py  qwen2_moe.py  qwen3_moe.py  qwen3_next.py  qwen3_omni_moe.py
defuser/utils/: common.py  device.py  hf.py  model.py
tests/: test_candidate_coverage.py  test_convert_model.py  test_device_utils.py  test_filter_rules.py  test_meta_model_defusion.py  test_moe_experts_interface.py  test_replace_modules_tracker.py
