# SPDX-FileCopyrightText: 2026 ModelCloud.ai
# SPDX-FileCopyrightText: 2026 qubitium@modelcloud.ai
# SPDX-License-Identifier: Apache-2.0
# Contact: qubitium@modelcloud.ai, x.com/qubitium

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "Defuser"
version = "0.0.15"
description = "Model defuser helper for HF Transformers."
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [
    { name = "ModelCloud", email = "qubitium@modelcloud.ai" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: C",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing :: Linguistic"
]
keywords = ["Defuser", "Model", "HF", "Transformers"]
dependencies = [
    "transformers",
]

[project.urls]
Homepage = "https://github.com/ModelCloud/Defuser"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["defuser*"]

[tool.pytest.ini_options]
pythonpath = ["."]
